Maintain data properties for rows

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -94,7 +94,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr data-disabled=true>
                                 <td>1</td>
                                 <td>Aimee Delaney</td>
                                 <td>erat.vitae@estvitaesodales.com</td>
