--- a/demo/derived.htm
+++ b/demo/derived.htm
@@ -79,77 +79,71 @@
                     <table id="grid" class="table table-condensed table-hover table-striped" data-selection="true" data-multi-select="true" data-row-select="true" data-keep-selection="true">
                         <thead>
                             <tr>
-                                <th data-column-id="id" data-identifier="true" data-converter="numeric" data-align="right" data-width="40">ID</th>
-                                <th data-column-id="name" data-formatter="link" data-order="asc" data-sort-rendered="true" data-converter="link">Name</th>
+                                <th data-column-id="id" data-identifier="true" data-converter="numeric" data-align="right" data-width="50">ID</th>
+                                <th data-column-id="avatar" data-formatter="avatar" data-converter="derived" data-sort-rendered="true" data-derived-rows="name">Avatar</th>
+                                <th data-column-id="name" data-formatter="link" data-order="asc" data-sort-rendered="true" data-converter="link" data-visible="false">Name</th>
                                 <th data-column-id="email" data-align="center" data-header-align="center" data-width="20%">Sender</th>
                                 <th data-column-id="received" data-css-class="cell" data-header-css-class="column" data-filterable="true">Received</th>
                                 <th data-column-id="link" data-sortable="false">Company</th>
                                 <th data-column-id="cost" data-formatter="currency" data-converter="numeric">Cost</th>
-                                <th data-column-id="derived" data-formatter="derived" data-converter="derived" data-sort-key="cost" data-derived-rows="cost,name">
-                                    Derived
-                                </th>
+                                <th data-column-id="derived" data-formatter="derived" data-converter="derived" data-sort-key="cost" data-derived-rows="name,cost">Derived</th>
                                 <th data-column-id="hidden" data-visible="false" data-visible-in-selection="false">Hidden</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>1</td>
-                                <td>{"text": "Aimee Delaney", "url":"http://www.aaa.ca"}</td>
-                                <td>erat.vitae@estvitaesodales.com</td>
+                                <td></td>
+                                <td>Aimee Delaney</td>
+                                <td></td>
                                 <td>03.06.16</td>
                                 <td>Maecenas Malesuada Foundation</td>
                                 <td>222222</td>
-                                <td>
-
-                                </td>
+                                <td></td>
                                 <td>C9F35176-EE9C-7DA5-DB47-5B62C57AA176</td>
                             </tr>
                             <tr>
                                 <td>2</td>
+                                <td>http://www.gefsgpegypt.org/Portals/0/empty_profile.gif</td>
                                 <td>{"text": "BORIS BULE", "url": "http://www.zzz.ca"}</td>
                                 <td>vitae.diam@Proinultrices.edu</td>
                                 <td>10.12.16</td>
                                 <td>Ac Corporation</td>
                                 <td>11111111</td>
-                                <td>
-
-                                </td>
+                                <td></td>
                                 <td>1BC83AA2-0979-C426-A3B4-4CC4F8B0CFF9</td>
                             </tr>
                             <tr>
                                 <td>3</td>
+                                <td>http://www.gefsgpegypt.org/Portals/0/empty_profile.gif</td>
                                 <td>{"text": "ALEX Reese", "url": "http://www.ccc.com"}</td>
                                 <td>mauris.sit.amet@nonmassa.ca</td>
                                 <td>27.06.17</td>
                                 <td>Nulla At Incorporated</td>
                                 <td>333333333</td>
-                                <td>
-
-                                </td>
+                                <td></td>
                                 <td>C3CF97AE-0E0E-EA4E-FBF5-A63444134B8E</td>
                             </tr>
                             <tr>
                                 <td>4</td>
+                                <td>http://www.gefsgpegypt.org/Portals/0/empty_profile.gif</td>
                                 <td>{"text": "Juliet Mcfarland", "url": "http://www.eee.com"}</td>
                                 <td>egestas.Duis.ac@eu.net</td>
                                 <td>02.07.16</td>
                                 <td>Nisi Sem Semper Limited</td>
                                 <td>555555</td>
-                                <td>
-
-                                </td>
+                                <td></td>
                                 <td>33AC322B-8AB4-B9F0-FAF0-BD69A7937627</td>
                             </tr>
                             <tr>
                                 <td>5</td>
+                                <td>http://www.gefsgpegypt.org/Portals/0/empty_profile.gif</td>
                                 <td>{"url": "http://www.ddd.com", "text": "Aaron Weaver"}</td>
                                 <td>Curabitur@fermentumconvallisligula.org</td>
                                 <td>07.06.17</td>
                                 <td>Magna Nec Quam Industries</td>
                                 <td>4444444</td>
-                                <td>
-
-                                </td>
+                                <td></td>
                                 <td>235B6F73-2150-A423-DC0A-A75C74669824</td>
                             </tr>
                         </tbody>
@@ -195,25 +189,59 @@
                                     link = $.extend(true, {}, defaults, options);
                                   return '<a href="' + link.url + '" target="' + link.target + '" class="' + link.class + '">' + link.text + '</a>';
                                 } catch (e) {
-                                    console.log(e);
                                   return row[column.id];
                                 }
+                            },
+                            // Fixed column: Media object with media-object and text
+                            'avatar': function(column, row) {
+                              try {
+                                var rows = column.rows.split(',');
+                                var self = this;
+                                var compiledRows = [];
+                                var $avatarMarkup = $('<div class="fixed-cell-content"><div class="media"><div class="media-left"></div></div></div>');
+                                var imgMarkup = '<div class="media-object avatar-sm"><img src="' + row[column.id] + '" style="width:60px;"></div>';
+                                if (row[column.id] == '') {
+                                  imgMarkup = '<div class="media-object avatar-sm empty"><div>Add Photo</div></div>';
+                                }
+                                $avatarMarkup.find('.media').prepend(imgMarkup);
+
+                                $.each(rows, function(index, element) {
+                                  var content = row[element];
+                                  var template = element.template || '<p>__data__</p>';
+                                  var column = self.getColumnSettings({id: element})[0];
+
+                                  if (element.formatter || column.formatter) {
+                                      var formatter = column.formatter || element.formatter;
+                                      content = ($.isFunction(formatter)) ?
+                                          formatter.call(self, column, row) :
+                                          column.converter.to(row[column.id]);
+                                  }
+                                  var data = template.replace('__data__', content);
+                                  compiledRows.push(data);
+                                });
+
+                                $avatarMarkup.find('.media-left').append(compiledRows.join(''));
+
+                                return $avatarMarkup.html();
+                              } catch (e) {
+                                return row[column.id];
+                              }
                             }
                         },
                         converters: {
-                              link: {
-                                to: function(val, row, column, that){
-                                  try{
-                                    val = JSON.parse(val);
-                                    return val.text;
-                                  }catch(e){
-                                    return val;
-                                  }
-                                },
-                                from: function(val){
-                                  return val;
-                                }
+                          link: {
+                            to: function(val, row, column, that){
+                              try{
+                                val = JSON.parse(val);
+                                return val.text;
+                              }catch(e){
+                                return val;
                               }
+                            },
+                            from: function(val){
+                              return val;
+                            }
+                          }
                         },
                         caseSensitive: true,
                         rowCount: [-1, 5, 10, 15],
