Took out data-visible=false on name column in derived example.

--- a/demo/derived.htm
+++ b/demo/derived.htm
@@ -80,7 +80,7 @@
                         <thead>
                             <tr>
                                 <th data-column-id="id" data-identifier="true" data-converter="numeric" data-align="right" data-width="50">ID</th>
-                                <th data-column-id="name" data-formatter="link" data-order="asc" data-sort-rendered="true" data-converter="link" data-visible="false">Name</th>
+                                <th data-column-id="name" data-formatter="link" data-order="asc" data-sort-rendered="true" data-converter="link">Name</th>
                                 <th data-column-id="email" data-align="center" data-header-align="center" data-width="20%">Sender</th>
                                 <th data-column-id="received" data-css-class="cell" data-header-css-class="column" data-filterable="true">Received</th>
                                 <th data-column-id="link" data-sortable="false">Company</th>
