--- a/demo/ajax.htm
+++ b/demo/ajax.htm
@@ -56,14 +56,15 @@
         <div class="row">
             <div class="col-md-3 visible-md visible-lg">
                 <div class="affix">
-                    Sub Nav
+                    <button id="deselect" type="button" class="btn btn-default">Deselect</button>
+                    <button id="deselectAll" type="button" class="btn btn-default">Deselect All</button>
                 </div>
             </div>
             <div class="col-md-9">
                 <table id="grid" class="table table-condensed table-hover table-striped">
                     <thead>
                         <tr>
-                            <th data-column-id="id" data-identifier="true" data-type="numeric">ID</th>
+                            <th data-column-id="id" data-identifier="true" data-type="string">ID</th>
                             <th data-column-id="sender" data-order="asc">Sender</th>
                             <th data-column-id="received">Received</th>
                         </tr>
@@ -89,8 +90,10 @@
                 ajaxSettings: {
                     method: "GET"
                 },
+                rowCount: 5,
                 ajax: true,
-                url: 'http://127.0.0.1:8080/demo/data.json',
+                keepSelection: true,
+                url: 'http://127.0.0.1:8080/data',
                 selection: true,
                 multiSelect: true
             }).on('loaded.rs.jquery.bootgrid', function(){
@@ -100,6 +103,14 @@
                         grid.bootgrid('select', [row.id]);
                     }
                 })
+            });
+
+            $("#deselect").on("click", function() {
+                $("#grid").bootgrid("deselect");
+            });
+
+            $("#deselectAll").on("click", function() {
+                $("#grid").bootgrid("deselectAll");
             });
         });
     </script>
