Escape regex characters before parsing them

--- a/demo/index.htm
+++ b/demo/index.htm
@@ -274,7 +274,7 @@
                         <tr>
                             <td>20</td>
                             <td>01</td>
-                            <td>nulla.magna.malesuada@musProin.edu</td>
+                            <td>[nulla.magna.malesuada@musProin.edu</td>
                             <td>30.01.17</td>
                             <td>Ac Urna Corp.</td>
                             <td>2</td>
